--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "element-ui": "^2.13.2",
     "less": "^3.12.2",
     "less-loader": "^5.0.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.3.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
