--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "node-sass": "^4.14.1",
     "sass-loader": "^7.3.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
